--- a/Weekly-Schedule/2.html
+++ b/Weekly-Schedule/2.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Generate Image from Google Sheets</title>
+    <title>週表生成器2</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <style>
         @font-face {
             font-family: 'GenSekiGothic';
@@ -32,15 +38,73 @@
         }
     </style>
 </head>
+
 <body>
-    <div id="controls">
-        <button onclick="generateImage()">Generate Image</button>
-        <a id="download" style="display:none;">Download Image</a>
+
+    <div id="controls" class="container mt-4">
+        <h2><b>週表生成器</b></h2>
+        <h6>CB、花燐、煦</h6>
+        <div class="row mb-3">
+            <div class="col">
+                <a class="btn btn-success mt-3" role="button" href="https://test.dreamcity.studio/Weekly-Schedule/">
+                    切換生成器
+                </a>
+            </div>
+        </div>
+
+        <hr>
+
+        <form>
+            <div class="row mb-3">
+                <div class="col">
+                    <h4><b>重要節目</b></h4>
+                    <p>填寫1~7。使用「,」做分離（例：1,2,7）</p>
+                </div>
+                <div class="col">
+                    <h4><b>不開播預設句</b></h4>
+                </div>
+            </div>
+
+            <div class="row mb-3">
+                <div class="col">
+                    <input type="text" class="form-control" id="highlight-cb" value="" placeholder="CB">
+                </div>
+                <div class="col">
+                    <input type="text" class="form-control" id="default-cb" value="BB在工作" placeholder="CB的預設節目">
+                </div>
+            </div>
+            <div class="row mb-3">
+                <div class="col">
+                    <input type="text" class="form-control" id="highlight-hualin" value="" placeholder="花燐">
+                </div>
+                <div class="col">
+                    <input type="text" class="form-control" id="default-hualin" value="花園休息鴨" placeholder="花燐的預設節目">
+                </div>
+            </div>
+            <div class="row mb-3">
+                <div class="col">
+                    <input type="text" class="form-control" id="highlight-xu" value="" placeholder="煦">
+                </div>
+                <div class="col">
+                    <input type="text" class="form-control" id="default-xu" value="研習羊族秘術" placeholder="煦的預設節目">
+                </div>
+            </div>
+            <hr>
+            <button type="button" class="btn btn-primary" onclick="generateImage()">生成週表 (需等待幾秒)</button>
+            <a id="download" class="btn btn-success mt-3" role="button" style="display:none;">下載圖片</a>
+        </form>
     </div>
     <div id="canvas-container">
-        <canvas id="canvas"></canvas>
+        <canvas id="canvas-preview"></canvas>
+        <canvas id="canvas" style="display:none;"></canvas>
     </div>
 
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script>
         async function loadFonts() {
             const genSekiGothic = new FontFace('GenSekiGothic', 'url(GenSekiGothic-H.ttf)');
@@ -54,7 +118,7 @@
         async function fetchSheetData() {
             const randomParam = Math.floor(Math.random() * 1000000);
             const url = `https://docs.google.com/spreadsheets/d/e/2PACX-1vTki1Xo06YY9v8v8gVqnNF3PyKGmTYlYBwt_FJDzYaUTZID10WaOy53-NeznTznftvgQLzHLVeXKe1N/pub?gid=1734652110&single=true&output=csv&random=${randomParam}`;
-            
+
             const response = await fetch(url);
             const text = await response.text();
             const data = text.split('\n').map(row => row.split(','));
@@ -113,14 +177,14 @@
 
             const artists = ["CB", "花燐", "煦"];
             const artistsDefault = {
-                "CB": [["－", "BB在工作"]],
-                "花燐": [["－", "花園休息鴨"]],
-                "煦": [["－", "研習羊族秘術"]],
+                "CB": [["－", document.getElementById('default-cb').value || "BB在工作"]],
+                "花燐": [["－", document.getElementById('default-hualin').value || "花園休息鴨"]],
+                "煦": [["－", document.getElementById('default-xu').value || "研習羊族秘術"]],
             };
             const highlightDay = {
-                "CB": [7],
-                "花燐": [1],
-                "煦": [],
+                "CB": document.getElementById('highlight-cb').value.split(',').map(Number).filter(n => !isNaN(n)),
+                "花燐": document.getElementById('highlight-hualin').value.split(',').map(Number).filter(n => !isNaN(n)),
+                "煦": document.getElementById('highlight-xu').value.split(',').map(Number).filter(n => !isNaN(n)),
             };
 
             const schedule = {};
@@ -147,7 +211,7 @@
                         let event = row[i + 10];
                         if (!event) continue;
                         event = processEventName(event.slice(5));
-                        
+
                         if (!schedule[artist][datePart]) {
                             schedule[artist][datePart] = [];
                         }
@@ -161,9 +225,9 @@
             }
 
             const artistPositions = {
-                "CB": [504, 387+3],
-                "花燐": [901, 387+3],
-                "煦": [1299, 387+3],
+                "CB": [504, 387 + 3],
+                "花燐": [901, 387 + 3],
+                "煦": [1299, 387 + 3],
             };
 
             for (const artist of artists) {
@@ -190,11 +254,21 @@
                 }
             }
 
+            // 縮小預覽圖
+            const previewCanvas = document.getElementById('canvas-preview');
+            const previewCtx = previewCanvas.getContext('2d');
+            const previewScale = 0.6;  // 縮小比例
+
+            previewCanvas.width = canvas.width * previewScale;
+            previewCanvas.height = canvas.height * previewScale;
+            previewCtx.drawImage(canvas, 0, 0, previewCanvas.width, previewCanvas.height);
+
             const downloadLink = document.getElementById('download');
             downloadLink.href = canvas.toDataURL('image/png');
-            downloadLink.download = 'output2.png';
+            downloadLink.download = 'output.png';
             downloadLink.style.display = 'block';
         }
     </script>
 </body>
+
 </html>
