--- a/yt_downloader/index.html
+++ b/yt_downloader/index.html
@@ -49,7 +49,7 @@
             const start_time = document.getElementById('start_time').value;
             const duration = document.getElementById('duration').value;
 
-            fetch('https://d172-106-104-104-49.ngrok-free.app/download', {  // 使用 ngrok 提供的 URL
+            fetch('https://89fb-106-104-104-225.ngrok-free.app/download', {  // 使用 ngrok 提供的 URL
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
