--- a/yt_thumbnail/index.html
+++ b/yt_thumbnail/index.html
@@ -3,26 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YT 直播封面圖取得</title>
+    <title>YT 封面圖取得</title>
 </head>
 <body>
-    <h1>YT 直播封面圖取得</h1>
-    <input type="text" id="yt-url" placeholder="輸入 YouTube 直播網址">
+    <h1>YT 封面圖取得</h1>
+    <input type="text" id="yt-url" placeholder="輸入 YouTube 影片或 Shorts 網址">
     <button onclick="getThumbnail()">取得封面圖</button>
     <div id="thumbnail-container"></div>
 
     <script>
         function getYouTubeID(url) {
-            const regex = /(?:https?:\/\/)?(?:www\.)?youtube\.com\/watch\?v=([a-zA-Z0-9_-]+)/;
-            const match = url.match(regex);
-            return match ? match[1] : null;
+            const videoRegex = /(?:https?:\/\/)?(?:www\.)?youtube\.com\/watch\?v=([a-zA-Z0-9_-]+)/;
+            const shortsRegex = /(?:https?:\/\/)?(?:www\.)?youtube\.com\/shorts\/([a-zA-Z0-9_-]+)/;
+            let match = url.match(videoRegex);
+            if (match) {
+                return { id: match[1], type: 'video' };
+            }
+            match = url.match(shortsRegex);
+            if (match) {
+                return { id: match[1], type: 'shorts' };
+            }
+            return null;
         }
 
         function getThumbnail() {
             const url = document.getElementById('yt-url').value;
-            const videoID = getYouTubeID(url);
-            if (videoID) {
-                const thumbnailUrl = `https://img.youtube.com/vi/${videoID}/maxresdefault.jpg`;
+            const videoInfo = getYouTubeID(url);
+            if (videoInfo) {
+                const { id, type } = videoInfo;
+                const thumbnailUrl = `https://img.youtube.com/vi/${id}/maxresdefault.jpg`;
                 document.getElementById('thumbnail-container').innerHTML = `
                     <img src="${thumbnailUrl}" alt="封面圖" style="max-width:100%; height:auto;">
                 `;
