--- a/Weekly-Schedule/index.html
+++ b/Weekly-Schedule/index.html
@@ -148,7 +148,7 @@
         function processEventName(eventName) {
             let isImportant = false;
 
-            if (eventName.includes("不開台")) {
+            if (eventName.includes("不開台)】")) {
                 eventName += "(不開台)";
             }
             if (eventName.includes("紅直播") || eventName.includes("紅連動")) {
