--- a/Weekly-Schedule/index.html
+++ b/Weekly-Schedule/index.html
@@ -218,7 +218,7 @@
                 "咩醬": [["－", document.getElementById('default-miejiang').value || "咩醬海巡"]],
                 "旭元": [["－", document.getElementById('default-xuyuan').value || "助教休息"]],
                 "妮酷": [["－", document.getElementById('default-nico').value || "妮在努力戴牙套"]],
-                "CB": [["－", document.getElementById('default-cb').value || "BB在工作"]],
+                "CB": [["－", document.getElementById('default-cb').value || "BB可能突發"]],
                 "花燐": [["－", document.getElementById('default-hualin').value || "花園休息鴨"]],
                 "煦": [["－", document.getElementById('default-xu').value || "研習羊族秘術"]],
             };
