--- a/Weekly-Schedule/index.html
+++ b/Weekly-Schedule/index.html
@@ -215,7 +215,7 @@
             const artists = ["嘟比", "咩醬", "旭元", "妮酷", "CB", "花燐", "煦"];
             const artistsDefault = {
                 "嘟比": [["－", document.getElementById('default-doubi').value || "阿比用力擠突發"]],
-                "咩醬": [["－", document.getElementById('default-miejiang').value || "咩醬海巡"]],
+                "咩醬": [["－", document.getElementById('default-miejiang').value || "咩醬休息"]],
                 "旭元": [["－", document.getElementById('default-xuyuan').value || "助教休息"]],
                 "妮酷": [["－", document.getElementById('default-nico').value || "妮在努力戴牙套"]],
                 "CB": [["－", document.getElementById('default-cb').value || "BB可能突發"]],
