--- a/Weekly-Schedule/index.html
+++ b/Weekly-Schedule/index.html
@@ -56,7 +56,7 @@
                     <input type="text" class="form-control" id="highlight-miejiang" placeholder="咩醬">
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" id="default-miejiang" value="咩醬休息" placeholder="咩醬的預設節目">
+                    <input type="text" class="form-control" id="default-miejiang" value="無限期休止" placeholder="咩醬的預設節目">
                 </div>
             </div>
             <div class="row mb-3">
@@ -72,7 +72,7 @@
                     <input type="text" class="form-control" id="highlight-nico" placeholder="妮酷">
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control" id="default-nico" value="妮在努力戴牙套" placeholder="妮酷的預設節目">
+                    <input type="text" class="form-control" id="default-nico" value="妮在寫歌" placeholder="妮酷的預設節目">
                 </div>
             </div>
             <div class="row mb-3">
