--- a/Weekly-Schedule/duby/index.html
+++ b/Weekly-Schedule/duby/index.html
@@ -36,10 +36,10 @@
         <form>
 
             <button type="button" class="btn btn-primary" onclick="generateImages()">生成週表 (需等待幾秒)</button>
-            <button type="button" class="btn btn-success" onclick="window.location.href='https://docs.google.com/spreadsheets/d/1rCeUZQb-fj47oFeih8wR8X_kYbLbPnXVwSN-FBUx37I/edit?gid=835991479#gid=835991479'">
+            <button type="button" class="btn btn-success" onclick="window.open('https://docs.google.com/spreadsheets/d/1rCeUZQb-fj47oFeih8wR8X_kYbLbPnXVwSN-FBUx37I/edit?gid=835991479', '_blank')">
                 寫週表
             </button>
-            
+                        
         </form>
 
     </div>
