--- a/Weekly-Schedule/index.html
+++ b/Weekly-Schedule/index.html
@@ -101,6 +101,10 @@
             </div>
             <hr>
             <button type="button" class="btn btn-primary" onclick="generateImages()">生成週表 (需等待幾秒)</button>
+            <button type="button" class="btn btn-success" onclick="window.open('https://docs.google.com/spreadsheets/d/1rCeUZQb-fj47oFeih8wR8X_kYbLbPnXVwSN-FBUx37I/edit?gid=1734652110#gid=1734652110', '_blank')">
+                寫週表
+            </button>
+
             <hr>
             <div class="mb-3">
                 <h4><b>重要節目文字</b></h4>
